fix alignment of various elements

--- a/logbook/src/main/webapp/css/landing.css
+++ b/logbook/src/main/webapp/css/landing.css
@@ -55,6 +55,7 @@
   position: relative;
   overflow: hidden;
   box-sizing: content-box;
+  margin-top: 15px;
 }
 
 @keyframes slide {
