--- a/logbook/src/main/webapp/css/navbar.css
+++ b/logbook/src/main/webapp/css/navbar.css
@@ -1,6 +1,6 @@
 #navbar h1 {
   font-size: 1.6rem;
-  margin-right: 32px;
+  margin: 0 32px;
 }
 
 #navbar-content h1 a {
@@ -24,7 +24,6 @@
   margin-right: auto;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   flex-flow: row nowrap;
   max-width: 65rem;
   height: 100%;
@@ -36,13 +35,12 @@
   color: #dee5ee;
   background-color: #585e71;
   border: 0;
-  padding: 1px 8px;
   font-family: inherit;
   height: 100%;
-  width: 9rem;
   cursor: pointer;
   overflow: hidden;
   box-sizing: border-box;
+  flex: 0 1 8rem;
 }
 
 @keyframes slide {
@@ -93,36 +91,30 @@
   letter-spacing: 0.03em;
 }
 
-#logout-button {
+#logout-button, #signin-nav-button, #signup-nav-button {
   margin-left: auto;
-  width: unset;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 1px 32px;
+  flex: 0 1 auto;
 }
 
-#signin-nav-button, #signup-nav-button {
-  width: unset;
-  padding-left: 0;
-  padding-right: 0;
+.navbar-list {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-flow: row nowrap;
 }
 
 @media only screen and (max-width: 67rem) {
   #navbar h1 {
-    padding-left: 32px;
-  }
-  #signin-nav-button, #signup-nav-button, #logout-button {
-    padding-right: 32px;
+    margin: 0 32px;
   }
 }
 @media only screen and (max-width: 45rem) {
   #navbar h1 {
-    margin-right: 24px;
-    padding-left: 16px;
-    padding-right: 16px;
+    margin: 0 16px;
   }
   #logout-button, #signin-nav-button, #signup-nav-button {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 1px 16px;
   }
   #profile-button .navbar-button-text,
   #show-users-button .navbar-button-text,
