--- a/logbook/src/main/webapp/css/styles.css
+++ b/logbook/src/main/webapp/css/styles.css
@@ -30,10 +30,10 @@ body {
 .sign-button {
   display: grid;
   align-items: baseline;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-areas:
           "left center right"
-          "bottom-left bottom-center bottom-right"
+          "bottom-left bottom-center bottom-right";
 }
 
 /* blue button */
@@ -53,7 +53,7 @@ body {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
   text-align: center;
   cursor: pointer;
-  margin: 16px auto 16px;
+  margin: 16px auto 10px;
   transition: top 200ms, box-shadow 200ms;
 }
 
@@ -150,20 +150,11 @@ input[type="button"]:active, button:active {
   padding: 0;
 }
 
-@media only screen and (max-width: 67rem) {
+@media only screen and (max-width: 45rem) {
   .parent-in-main {
     border: 0;
     border-radius: unset;
     box-shadow: none;
-  }
-}
-
-@media only screen and (max-width: 45rem) {
-  #landing-section, #signin-section {
-    padding-top: 0;
-  }
-
-  .parent-in-main {
-    padding: 16px;
+    padding: 16px 16px 24px;
   }
 }
